--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ash <relativistic.policeman@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+enum_dispatch = "0.1"
 itertools = "0.8"
 minifb = "0.11"
 nalgebra = "0.18"
